k8s/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-oportunidades-web
  namespace: portal-oportunidades
  labels: { app: portal-oportunidades-web }
spec:
  replicas: 2
  selector:
    matchLabels: { app: portal-oportunidades-web }
  template:
    metadata:
      labels: { app: portal-oportunidades-web }
    spec:
      containers:
        - name: web
          image: registry.xpto/portal-oportunidades-web:latest
          ports:
            - containerPort: 80
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 200m, memory: 128Mi }
          livenessProbe:
            httpGet: { path: /, port: 80 }
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: portal-oportunidades-web
  namespace: portal-oportunidades
spec:
  selector: { app: portal-oportunidades-web }
  ports:
    - port: 80
      targetPort: 80
